--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "version": 2,
     "builds": [
-        {"src": "app.py", "use": "@vercel/python"}
+        {"src": "app.py", "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.8" }}
     ],
     "routes": [
         {"src": "/(.*)", "dest": "app.py"}
